--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,6 @@ MESSAGE(STATUS "This is Project source dir " ${PROJECT_SOURCE_DIR})
 MESSAGE(STATUS "This is PROJECT_BINARY_DIR dir " ${PROJECT_BINARY_DIR})
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
-# SET(DEBUG ON CACHE BOOL "Enable debug mode" FORCE)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 
@@ -26,22 +25,22 @@ OPTION(USE_SIMD "Use SIMD" OFF)
 
 MESSAGE(STATUS "HOME dir: $ENV{HOME}")
 #SET(ENV{变量名} 值)
-IF(WIN32)
+IF (WIN32)
     MESSAGE(STATUS "This is windows.")
     ADD_DEFINITIONS(-DWIN32)
-ELSEIF(WIN64)
+ELSEIF (WIN64)
     MESSAGE(STATUS "This is windows.")
     ADD_DEFINITIONS(-DWIN64)
-ELSEIF(APPLE)
+ELSEIF (APPLE)
     MESSAGE(STATUS "This is apple")
     # normally __MACH__ has already been defined
-    ADD_DEFINITIONS(-D__MACH__ )
-ELSEIF(UNIX)
+    ADD_DEFINITIONS(-D__MACH__)
+ELSEIF (UNIX)
     MESSAGE(STATUS "This is UNIX")
     ADD_DEFINITIONS(-DUNIX -DLINUX)
-ELSE()
+ELSE ()
     MESSAGE(STATUS "This is UNKNOW OS")
-ENDIF(WIN32)
+ENDIF (WIN32)
 
 # This is for clangd plugin for vscode
 # mute sign-compare error in lex/yacc
@@ -52,23 +51,39 @@ IF (ENABLE_NOPIE)
 ENDIF (ENABLE_NOPIE)
 
 # Requires support for avx2
-IF(USE_SIMD)
+IF (USE_SIMD)
     SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS} -mavx2")
     ADD_DEFINITIONS(-DUSE_SIMD)
-ENDIF(USE_SIMD)
+ENDIF (USE_SIMD)
 
-IF(DEBUG)
-    MESSAGE(STATUS "DEBUG has been set as TRUE ${DEBUG}")
-    SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS}  -O0 -g -DDEBUG ")
+# Set the default build type to Release
+IF (NOT CMAKE_BUILD_TYPE)
+    SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "BUILD TYPE" FORCE)
+ENDIF ()
+
+# Convert CMAKE_BUILD_TYPE to lowercase for case-insensitive comparison
+STRING(TOLOWER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE)
+
+# Configure compilation options based on the build type
+IF (CMAKE_BUILD_TYPE STREQUAL "debug")
+    MESSAGE(STATUS "Building in Debug mode")
+    SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS} -O0 -g -DDEBUG")
     ADD_DEFINITIONS(-DENABLE_DEBUG)
-ELSEIF(NOT DEFINED ENV{DEBUG})
-    MESSAGE(STATUS "Disable debug")
-    SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS}  -O2 -g ")
-ELSE()
-    MESSAGE(STATUS "Enable debug")
-    SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS}  -O0 -g -DDEBUG")
+ELSEIF (CMAKE_BUILD_TYPE STREQUAL "release")
+    MESSAGE(STATUS "Building in Release mode")
+    SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS} -O2")
+ELSEIF (CMAKE_BUILD_TYPE STREQUAL "relwithdebinfo")
+    MESSAGE(STATUS "Building in RelWithDebInfo mode")
+    SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS} -O2 -g -DDEBUG")
     ADD_DEFINITIONS(-DENABLE_DEBUG)
-ENDIF(DEBUG)
+ELSEIF (CMAKE_BUILD_TYPE STREQUAL "minsizerel")
+    MESSAGE(STATUS "Building in MinSizeRel mode")
+    SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS} -Os")
+    ADD_DEFINITIONS(-DENABLE_MIN_SIZE)
+ELSE ()
+    MESSAGE(WARNING "Unknown build type: ${CMAKE_BUILD_TYPE}. Defaulting to Release.")
+    SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS} -O2")
+ENDIF ()
 
 IF (CONCURRENCY)
     MESSAGE(STATUS "CONCURRENCY is ON")
@@ -79,15 +94,15 @@ ENDIF (CONCURRENCY)
 MESSAGE(STATUS "CMAKE_CXX_COMPILER_ID is " ${CMAKE_CXX_COMPILER_ID})
 IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND ${STATIC_STDLIB})
     ADD_LINK_OPTIONS(-static-libgcc -static-libstdc++)
-ENDIF()
+ENDIF ()
 
 IF (ENABLE_ASAN)
     MESSAGE(STATUS "Instrumenting with Address Sanitizer")
     SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS} -fno-omit-frame-pointer -fsanitize=address -fsanitize-address-use-after-scope")
     IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND ${STATIC_STDLIB})
         ADD_LINK_OPTIONS(-static-libasan)
-    ENDIF()
-ENDIF()
+    ENDIF ()
+ENDIF ()
 
 IF (ENABLE_TSAN)
     # supported flags
@@ -101,7 +116,7 @@ IF (ENABLE_TSAN)
     # -Qunused-arguments 有些编译器不支持，所以先删掉
     IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND ${STATIC_STDLIB})
         ADD_LINK_OPTIONS(-static-libtsan)
-    ENDIF()
+    ENDIF ()
     SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${TSAN_FLAGS}")
     SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${TSAN_FLAGS}")
 ENDIF (ENABLE_TSAN)
@@ -122,12 +137,12 @@ IF (ENABLE_UBSAN)
 ENDIF (ENABLE_UBSAN)
 
 IF (CMAKE_INSTALL_PREFIX)
-    MESSAGE(STATUS "CMAKE_INSTALL_PREFIX has been set as " ${CMAKE_INSTALL_PREFIX} )
-ELSEIF(DEFINED ENV{CMAKE_INSTALL_PREFIX})
+    MESSAGE(STATUS "CMAKE_INSTALL_PREFIX has been set as " ${CMAKE_INSTALL_PREFIX})
+ELSEIF (DEFINED ENV{CMAKE_INSTALL_PREFIX})
     SET(CMAKE_INSTALL_PREFIX $ENV{CMAKE_INSTALL_PREFIX})
-ELSE()
+ELSE ()
     SET(CMAKE_INSTALL_PREFIX /tmp/${PROJECT_NAME})
-ENDIF()
+ENDIF ()
 MESSAGE(STATUS "Install target dir is " ${CMAKE_INSTALL_PREFIX})
 
 IF (DEFINED ENV{LD_LIBRARY_PATH})
@@ -138,20 +153,20 @@ IF (DEFINED ENV{LD_LIBRARY_PATH})
 ENDIF ()
 
 IF (EXISTS /usr/local/lib)
-    LINK_DIRECTORIES (/usr/local/lib)
+    LINK_DIRECTORIES(/usr/local/lib)
 ENDIF ()
 IF (EXISTS /usr/local/lib64)
-    LINK_DIRECTORIES (/usr/local/lib64)
+    LINK_DIRECTORIES(/usr/local/lib64)
 ENDIF ()
 
 INCLUDE_DIRECTORIES(. ${PROJECT_SOURCE_DIR}/deps /usr/local/include)
 
-IF(WITH_UNIT_TESTS)
+IF (WITH_UNIT_TESTS)
     IF (ENABLE_COVERAGE)
         SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS} -fprofile-arcs -ftest-coverage")
     ENDIF (ENABLE_COVERAGE)
     enable_testing()
-ENDIF(WITH_UNIT_TESTS)
+ENDIF (WITH_UNIT_TESTS)
 
 SET(CMAKE_CXX_FLAGS ${CMAKE_COMMON_FLAGS})
 SET(CMAKE_C_FLAGS ${CMAKE_COMMON_FLAGS})
@@ -166,9 +181,8 @@ ADD_SUBDIRECTORY(tools)
 
 IF (WITH_BENCHMARK)
     ADD_SUBDIRECTORY(benchmark)
-ENDIF(WITH_BENCHMARK)
+ENDIF (WITH_BENCHMARK)
 
-IF(WITH_UNIT_TESTS)
+IF (WITH_UNIT_TESTS)
     ADD_SUBDIRECTORY(unittest)
-ENDIF(WITH_UNIT_TESTS)
-
+ENDIF (WITH_UNIT_TESTS)
