--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,7 +184,7 @@ ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(tools)
 
 IF (WITH_BENCHMARK)
-    ADD_SUBDIRECTORY(benchmark)
+    # ADD_SUBDIRECTORY(benchmark)
 ENDIF(WITH_BENCHMARK)
 
 IF(WITH_UNIT_TESTS)
