--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -14,4 +14,4 @@ IF (WITH_MEMTRACER)
     ADD_SUBDIRECTORY(memtracer)
 ENDIF (WITH_MEMTRACER)
 
-ADD_SUBDIRECTORY(observer)
+# ADD_SUBDIRECTORY(observer)
